# shagr.ru

./: .gitignore  LICENSE  README.md  load_test_data.py  pyproject.toml  requirements.txt  test_data.json
api_app/: urls.py  views.py
catalog_app/: admin.py  apps.py  models.py  schemas.py
catalog_app/migrations/: 0001_initial.py  0002_image_goodimage_category_preview_image_and_more.py
client_app/: admin.py  apps.py  models.py  schemas.py
client_app/migrations/: 0001_initial.py  0002_client_email.py
converters/: catalog_converter.py  client_converter.py  order_converter.py
order_app/: admin.py  apps.py  models.py  schemas.py
order_app/migrations/: 0001_initial.py  0002_statusorder_is_closed.py  0003_alter_order_client.py
repositories/: catalog_repository.py  client_repository.py  order_repository.py
server/: admin.py  models.py  settings.py  urls.py
services/: catalog_service.py  client_service.py  order_service.py
services/jwt_tokens/: __init__.py  jwt_hs256.py  jwt_types.py
